src/semantic/tests/demos/04.d
//  4. Argument count checking for known functions
var f := func (x) is print x * 2; end

f(8, 9) // error
